# bug-tracker

./: .env.example  .gitignore  README.md  config.py  logger.py  main.py  pyproject.toml  requirements.txt  setup.cfg
backend/: __init__.py  config.py  db.py  logger.py
backend/api/: __init__.py  errors.py  issues.py  projects.py  users.py  util.py
backend/api/issues/: issues.py
backend/api/projects/: projects.py
backend/api/users/: users.py
backend/auth/: __init__.py  login.py  sign_up.py
backend/general/: __init__.py  routes.py
backend/lib/: const.py  util.py
backend/main/: __init__.py  routes.py
backend/models/: __init__.py  base.py  comment.py  comments.py  issues.py  projects.py  users.py  util.py  validate.py
backend/schemas/: comment.py  issues.py  organizations.py  projects.py  users.py  util.py
backend/utils/: auth.py  error_messages.py  exceptions.py  html.py  security.py
frontend/: index.html
frontend/components/: base.html  index.html  login.html
frontend/components/auth/: login.html  signup.html
frontend/components/main/: base-raw.html  base.html  footer.html  header.html  sidebar.html
frontend/components/pages/: dashboard.html  issues.html  notifications.html  user.html
frontend/components/partial/: _create_issue.html  _create_issue.jinja2
frontend/static/css/: light-bootstrap-dashboard.css
frontend/static/js/: demo.js  light-bootstrap-dashboard.js  script.js
tests/: conftest.py  test_app.py  test_db.py  test_models.py
tests/api/: test_issues.py  test_projects.py  test_users.py  test_util.py
tests/data/: issues.py  projects.py  users.py
tests/lib/: test_const.py  test_util.py
tests/models/: test_issues.py  test_projects.py  test_users.py  test_util.py  test_validate.py
tools/: init_db.py
