[tool.black]
line-length = 100
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
  )/
)
'''

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 100
lines_after_imports = 2
multi_line_output = 3
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']

[tool.poetry]
name = "bug-tracker"
license = "MIT"
version = "0.1.0"
readme = "README.md"
description = "Register issues that occured in the projects."
authors = ["Leonid <golani04@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.61.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["dotenv", "email"], version = "^1.8.1"}
uvicorn = "^0.12.3"
requests = "^2.25.1"
SQLAlchemy = "^1.4.2"
Jinja2 = "^2.11.3"
aiofiles = "^0.6.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^20.8b1"
coverage = "^5.5"
flake8 = "^3.9.0"
freezegun = "^0.3.15"
isort = "^5.7.0"
pytest = "^6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
