[tool.black]
line-length = 100
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
  )/
)
'''

[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 100
lines_after_imports = 2
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.coverage.run]
# when line in code could jump to more than 
# one next line, track which destinations 
# were visited
branch = true

omit = '''
    # exclude tests folder
    tests/*
    # exclude venv files
    */venv/*
    # exclude init files
    *\__init__.py
'''

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]

[tool.coverage.html]
directory = "reports"

[tool.pytest.ini_options]
minversion = "6.0"
# addopts = "--color=yes --cov=backend --cov-report=html --cov-report=term -ra"
testpaths = ["tests"]
markers = ["api"]

[tool.poetry]
name = "bug-tracker"
license = "MIT"
version = "0.2.0"
readme = "README.md"
description = "Register issues that occured in the projects."
authors = ["Leonid <golani04@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["dotenv", "email"], version = "^1.10.7"}
uvicorn = "^0.22.0"
requests = "^2.29.0"
SQLAlchemy = "^2.0.11"
Jinja2 = "^3.1.2"
aiofiles = "^23.1.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
aiohttp = "^3.8.4"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.5"
black = "^23.3.0"
coverage = "^7.2.4"
flake8 = "^6.0.0"
freezegun = "^1.2.2"
isort = "^5.12.0"
pytest = "^7.3.1"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
